<resources>
    <string name="app_name">PapyrusEMR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>
    <string name="action_node">서식 관리</string>


    <!-- Strings related to Settings -->
    <string name="setting_category_1">접속 정보</string>
    <string name="setting_category_2">인증 정보</string>
    <string name="setting_category_4">파일 관리</string>
    <string name="setting_category_3">어플리케이션 정보</string>

    <string name="setting_ip">접속 IP 주소</string>
    <string name="setting_public_ip">공인 IP 주소</string>
    <string name="default_value">andcom.iptime.org</string>
    <string name="setting_port">외부 접속 포트</string>
    <string name="setting_phone">전화 번호</string>
    <string name="setting_node">서식 삭제</string>

    <string name="setting_version">버전 정보</string>
    <string name="setting_teamviewer">원격 지원 받기</string>
    <string name="setting_null"> </string>

    //Tool Const
    <string name="TOOL_TEXT">TOOL_TEXT</string>
    <string name="TOOL_PEN">TOOL_PEN</string>
    <string name="TOOL_IMAGE">TOOL_IMAGE</string>
    <string name="TOOL_MARKER">TOOL_MARKER</string>
    <string name="TOOL_STROKE">TOOL_STROKE</string>
    <string name="TOOL_COLOR">TOOL_COLOR</string>
    <string name="TOOL_SELECT">TOOL_SELECT</string>
    <string name="TOOL_ERASER">TOOL_ERASER</string>
    <string name="TOOL_SAVE">TOOL_SAVE</string>

    <string name="TOOL_PASTE">붙여넣기</string>
    <string name="TOOL_CUT">잘라내기</string>
    <string name="TOOL_COPY">복사</string>
    <string name="TOOL_DELETE">삭제</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
